--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "homepage": "https://github.com/JohnJoseph2019/example_one",
     "name": "react-portfolio-andrea-melisa",
     "private": true,
     "version": "0.0.0",
