--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "http://JohnJoseph2019.github.io/example_one/",
+    "homepage": "http://github.com/JohnJoseph2019/example_one",
     "name": "react-portfolio-andrea-melisa",
     "private": true,
     "version": "0.0.0",
