--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "react-portfolio-andrea-melisa",
-    "private": true,
+    "homepage": "https://JohnJoseph2019.github.io/example_one",
+    "private": false,
     "version": "0.0.0",
     "type": "module",
     "scripts": {
